@@ -6,6 +6,8 @@
 static filetype_t 
 identify_file(state *s, char *fn, FILE *handle)
 {
+  if (NULL == s || NULL == fn || NULL == handle)
+    internal_error("%s: NULL values in identify_file", __progname);
   
   
   return file_hashdeep_10;
@@ -20,11 +22,7 @@ status_t add_hash_to_algorithm(state *s,
   if (NULL == s || NULL == f)
     return status_unknown_error;
   
-  if (hashtable_add(s,alg,f))
-    return status_unknown_error;
-  
-
-  return status_ok;
+  return (hashtable_add(s,alg,f));
 }
 
 
@@ -38,6 +36,7 @@ status_t add_hash(state *s, file_data_t *f)
 
   for (i = 0 ; i < NUM_ALGORITHMS ; ++i)
     {
+      /* RBF - Error check this function */
       if (s->hashes[i]->inuse)
 	add_hash_to_algorithm(s,i,f);
     }
@@ -70,14 +69,43 @@ status_t load_match_file(state *s, char *fn)
     return status_file_error;
   }
   
+  /* RBF - Adding hash for /dev/null */
+  file_data_t * rbf = (file_data_t *)malloc(sizeof(file_data_t));
+  rbf->hash[alg_md5] = strdup("d41d8cd98f00b204e9800998ecf8427e");
+  rbf->hash[alg_sha256] = strdup("e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855");
+  rbf->file_size = 0;
+  rbf->file_name = _TEXT("/dev/null");
+  rbf->used = FALSE;
+  rbf->id = 0;
+  rbf->next = NULL;
+  s->next_known_id++;
+
+  add_hash(s,rbf);
 
   fclose(handle);
   return status_ok;
 }
 
+static char * 
+status_to_str(status_t s)
+{
+  switch (s) {
+  case status_ok: return "ok";
+  case status_match: return "complete match";
+  case status_partial_match: return "partial match";
+  case status_file_size_mismatch: return "file size mismatch";
+  case status_file_name_mismatch: return "file name mismatch";
+  case status_no_match: return "no match"; 
+
+  default:
+    return "unknown";
+  }      
+}
+
 
 status_t is_known_file(state *s)
 {
+  hashtable_entry_t * ret , * tmp;
   hashname_t i;
 
   for (i = 0 ; i < NUM_ALGORITHMS; ++i)
@@ -85,6 +113,36 @@ status_t is_known_file(state *s)
     if (s->hashes[i]->inuse)
     {
 
+      ret = hashtable_contains(s,i);
+      if (NULL != ret)
+	{
+	  tmp = ret;
+	  while (tmp != NULL)
+	    {
+	      display_filename(stdout,s->current_file->file_name);
+	      fprintf(stdout," matches ");
+	      display_filename(stdout,tmp->data->file_name);
+	      print_status(": %s", status_to_str(tmp->status));
+			   
+	      if (tmp->data->used)
+		print_status("This file has been previously matched");
+	      else
+		{
+		  tmp->data->used = TRUE;
+		  print_status("This file has NOT been previously matched");
+		}
+		  
+	      tmp = tmp->next;
+	    }
+	}
+      else
+	{
+	  if (s->mode & mode_verbose)
+	    {
+	      display_filename(stdout,s->current_file->file_name);
+	      print_status(": No match");
+	    }
+	}
     }
   }
 
